--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,20 @@
 {
-  "name": "melvinchr",
-  "theme_color": "#123b5c",
-  "background_color": "#1b86db",
-  "display": "browser",
-  "scope": "/",
-  "start_url": "/https://melvinchr.github.io/"
+    "short_name": "RizzCode",
+    "name": "RizzCode",
+    "start_url": ".",
+    "display": "standalone",
+    "background_color": "#ffffff",
+    "theme_color": "#1976d2",
+    "icons": [
+        {
+            "src": "icons/icon-192x192.png",
+            "sizes": "192x192",
+            "type": "image/png"
+        },
+        {
+            "src": "icons/icon-512x512.png",
+            "sizes": "512x512",
+            "type": "image/png"
+        }
+    ]
 }
