--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,22 @@
 {
-    "short_name": "RizzCode",
     "name": "RizzCode",
-    "start_url": ".",
+    "start_url": "https://melvinchr.github.io/",
+    "display": "fullscreen",
     "display": "standalone",
+    "display": "minimal-ui",
+    "display": "browser",
     "background_color": "#ffffff",
     "theme_color": "#1976d2",
     "icons": [
         {
             "src": "icons/icon-192x192.png",
             "sizes": "192x192",
-            "type": "image/png"
+            "type": "image/png",
         },
         {
             "src": "icons/icon-512x512.png",
             "sizes": "512x512",
-            "type": "image/png"
+            "type": "image/png",
         }
     ]
 }
